duplicated unplash images to solve visible jump

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -18,7 +18,7 @@
   z-index: 0;
 }
 .imagesLine {
-  animation: runner 20s linear infinite;
+  animation: runner 40s linear infinite;
   display: flex;
   transform: translateX(25%);
   will-change: transform;
